fix: ignore nested complex maps
Only process nested maps when they are valueFrom entries, all other
non-scalar values are silently skipped

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -75,3 +75,9 @@ spec:
           env:
           {{- include "util.toEnv" (list .Values.deepBlock "DEEP") | nindent 12 }}
 
+        - name: ext-storage
+          image: alpine:3
+          command: ["sleep", "3600"]
+          env:
+          {{- include "util.toEnv" (list .Values "extStorage") | nindent 12 }}
+
