refactor: nested-valuefrom test

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -73,7 +73,7 @@ spec:
           image: alpine:3
           command: ["sleep", "3600"]
           env:
-          {{- include "util.toEnv" (list .Values.deepBlock "DEEP") | nindent 12 }}
+          {{- include "util.toEnv" (list .Values.deepBlock "inner") | nindent 12 }}
 
         - name: ext-storage
           image: alpine:3
