test: fix sscase unit sanity check

--- a/tests/unit/sscase_test.yaml
+++ b/tests/unit/sscase_test.yaml
@@ -5,7 +5,7 @@ tests:
   - it: sanity check
     asserts:
       - isNotNull:
-          path: envs
+          path: env
 
   - it: "SSCase - camelCase"
     asserts:
