--- a/tests/templates/toenv.yaml
+++ b/tests/templates/toenv.yaml
@@ -1,43 +1,23 @@
-# envlist.yaml
-envlist:
-  - name: direct-env
-    env: {{ include "util.toEnv" (list .Values "envDirect") | nindent 6 }}
-
-  - name: config-env
-    env: {{ include "util.toEnv" (list .Values "config") | nindent 6 }}
-
-  - name: custom-prefix-env
-    env: {{ include "util.toEnv" (list .Values.customBlock "CUSTOM") | nindent 6 }}
-
-  - name: top-valuefrom
-    env: {{ include "util.toEnv" (list .Values "topValueFrom") | nindent 6 }}
-
-  - name: missing-parent-onearg
-    env: {{ include "util.toEnv" .Values.nonexistentBlock | nindent 6 }}
-
-  - name: missing-parent-twoarg
-    env: {{ include "util.toEnv" (list .Values.nonexistentBlock "MISSING") | nindent 6 }}
-
-  - name: simple-env-var
-    env: {{ include "util.toEnv" (list .Values "simpleEnvVar") | nindent 6 }}
-
-  - name: case-conventions
-    env: {{ include "util.toEnv" .Values.caseConventions | nindent 6 }}
-
-  - name: edge-cases
-    env: {{ include "util.toEnv" (list .Values.edgeCases "EDGE") | nindent 6 }}
-
-  - name: edge-cases-2
-    env: {{ include "util.toEnv" (list .Values "edgeCases") | nindent 6 }}
-
-  - name: edge-cases-3
-    env: {{ include "util.toEnv" .Values.edgeCases | nindent 6 }}
-
-  - name: extra-edge-mixed
-    env: {{ include "util.toEnv" (list .Values.extraEdgeCases "XEDGE") | nindent 6 }}
-
-  - name: nested-valuefrom
-    env: {{ include "util.toEnv" (list .Values.deepBlock "inner") | nindent 6 }}
-
-  - name: inner
-    env: {{ include "util.toEnv" (list .Values.someOuter.someInner.sftp "innerConfigSFTP") | nindent 6 }}
+# toenv.yaml
+envs:
+  simple-value: {{ include "util.toEnv" .Values.simpleValue | nindent 4 }}
+  simple-value-name-implicit: {{ include "util.toEnv" (list .Values "simpleValue") | nindent 4 }}
+  simple-value-name-explicit: {{ include "util.toEnv" (list .Values.simpleValue "customPrefix") | nindent 4 }}
+  simple-map: {{ include "util.toEnv" .Values.simpleMap | nindent 4 }}
+  simple-map-name-implicit: {{ include "util.toEnv" (list .Values "simpleMap") | nindent 4 }}
+  simple-map-name-explicit: {{ include "util.toEnv" (list .Values.simpleMap "customPrefix") | nindent 4 }}
+  simple-list: {{ include "util.toEnv" .Values.simpleList | nindent 4 }}
+  simple-list-name-implicit: {{ include "util.toEnv" (list .Values "simpleList") | nindent 4 }}
+  simple-list-name-explicit: {{ include "util.toEnv" (list .Values.simpleMap "customPrefix") | nindent 4 }}
+  simple-valuefrom: {{ include "util.toEnv" .Values.simpleValueFrom | nindent 4 }}
+  simple-valuefrom-name-implicit: {{ include "util.toEnv" (list .Values "simpleValueFrom") | nindent 4 }}
+  simple-valuefrom-name-explicit: {{ include "util.toEnv" (list .Values.simpleValueFrom "customPrefix") | nindent 4 }}
+  multi-valuefrom-map: {{ include "util.toEnv" .Values.multiValueFromMap | nindent 4 }}
+  multi-valuefrom-list: {{ include "util.toEnv" .Values.multiValueFromList | nindent 4 }}
+  mixed-map: {{ include "util.toEnv" .Values.mixedMap | nindent 4 }}
+  mixed-list: {{ include "util.toEnv" .Values.mixedList | nindent 4 }}
+  edge-case-deep-sub-map: {{ include "util.toEnv" (list .Values.edgeCases.innerTargets.outer "innerMap") | nindent 4 }}
+  edge-case-deep-sub-list: {{ include "util.toEnv" (list .Values.edgeCases.innerTargets.outer "innerList") | nindent 4 }}
+  edge-case-ignore-subkeys-map: {{ include "util.toEnv" (list .Values.edgeCases "ignoreSubkeysMap") | nindent 4 }}
+  edge-case-ignore-subkeys-list: {{ include "util.toEnv" (list .Values.edgeCases "ignoreSubkeysList") | nindent 4 }}
+  edge-case-ignore-missing-key: {{ include "util.toEnv" .Values.nonexistenKey | nindent 4 }}
