--- a/tests/unit/sscase_test.yaml
+++ b/tests/unit/sscase_test.yaml
@@ -1,3 +1,4 @@
+# sscase_test.yaml
 suite: SSCase Tests
 templates:
   - sscase.yaml
@@ -5,7 +6,7 @@ tests:
   - it: sanity check
     asserts:
       - isNotNull:
-          path: envs
+          path: env
 
   - it: "SSCase - camelCase"
     asserts:
